Use application plugin instead of docker plugin for testing