@@ -8,8 +8,6 @@
 //                                                                            //
 //============================================================================//
 
-import com.bmuschko.gradle.docker.tasks.container.*
-import com.bmuschko.gradle.docker.tasks.image.*
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
@@ -18,9 +16,21 @@ plugins {
 	id("sandpolis-module")
 	id("sandpolis-publish")
 	id("sandpolis-soi")
-	id("org.openjfx.javafxplugin") version "0.0.9"
-	id("com.bmuschko.docker-remote-api") version "6.6.0"
+	id("org.openjfx.javafxplugin") version "0.0.10"
+	id("application")
+
 	kotlin("jvm") version "1.5.20"
+}
+
+application {
+    mainModule.set("com.sandpolis.client.lifegem")
+    mainClass.set("com.sandpolis.client.lifegem.Main")
+}
+
+tasks.named<JavaExec>("run") {
+	environment.put("S7S_DEVELOPMENT_MODE", "true")
+	environment.put("S7S_LOG_LEVELS", "io.netty=WARN,java.util.prefs=OFF,com.sandpolis=TRACE")
+    jvmArgs = listOf("--add-opens", "javafx.graphics/javafx.scene=tornadofx")
 }
 
 repositories {
@@ -36,16 +46,8 @@ tasks.withType<KotlinCompile>().configureEach {
 }
 
 javafx {
-	modules = listOf( "javafx.controls", "javafx.fxml", "javafx.graphics" )
+	modules = listOf( "javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.web", "javafx.swing" )
 	version = "16"
-}
-
-sourceSets {
-	main {
-		java {
-			srcDirs("gen/main/java")
-		}
-	}
 }
 
 dependencies {
@@ -61,9 +63,6 @@ dependencies {
 
 	// https://github.com/nayuki/QR-Code-generator
 	implementation("io.nayuki:qrcodegen:1.6.0")
-
-	// https://github.com/javaee/jpa-spec
-	implementation("javax.persistence:javax.persistence-api:2.2")
 	
 	implementation("no.tornado:tornadofx:2.0.0-SNAPSHOT")
 	implementation("org.jetbrains.kotlin:kotlin-reflect:1.5.0")
@@ -84,16 +83,4 @@ task<Sync>("assembleLib") {
 	from(configurations.runtimeClasspath)
 	from(tasks.named("jar"))
 	into("${buildDir}/lib")
-}
-
-task<DockerBuildImage>("buildImage") {
-	dependsOn(tasks.named("assembleLib"))
-	inputDir.set(file("."))
-	images.add("sandpolis/client/lifegem:${project.version}")
-	images.add("sandpolis/client/lifegem:latest")
-}
-
-task<Exec>("runImage") {
-	dependsOn(tasks.named("buildImage"))
-	commandLine("docker", "run", "-v", "/tmp/.X11-unix/:/tmp/.X11-unix/", "-e", "DISPLAY", "--net", "host", "--rm", "sandpolis/client/lifegem:latest")
 }
